updating package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "lint": "eslint ./cypress/e2e/",
     "prepare": "husky",
-    "cy:allure:registration": "cypress run --spec './cypress/e2e/nrg_task/features/registration_and_login.feature' --env allure=true",
-    "cy:allure:droppable": "cypress run --spec './cypress/e2e/nrg_task/features/droppable.feature' --env allure=true",
+    "cy:allure:checkout": "cypress run --spec './cypress/e2e/perigord_task/features/checkout.feature' --env allure=true",
     "allure:generate": "allure generate allure-results --clean -o allure-report",
     "allure:combine": "node ./node_modules/allure-single-html-file-js/combine.js allure-report"
   },
